syntax = "proto3";

package proto;
option go_package = "./proto";

service ProductService {
    rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
    rpc GetProduct (GetProductRequest) returns (ProductResponse);
    rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
    rpc UpdateProduct (UpdateProductRequest) returns (ProductResponse);
    rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int32 stock = 5;
    string category = 6;
    repeated string images = 7;
    string created_at = 8;
    string updated_at = 9;
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    double price = 3;
    int32 stock = 4;
    string category = 5;
    repeated string images = 6;
}

message GetProductRequest {
    string id = 1;
}

message ListProductsRequest {
    int32 page = 1;
    int32 limit = 2;
    string category = 3;
}

message ListProductsResponse {
    repeated Product products = 1;
    int32 total = 2;
}

message UpdateProductRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int32 stock = 5;
    string category = 6;
    repeated string images = 7;
}

message DeleteProductRequest {
    string id = 1;
}

message ProductResponse {
    Product product = 1;
}

message DeleteProductResponse {
    bool success = 1;
}
